--- a/csm146/hw/hw2/main.tex
+++ b/csm146/hw/hw2/main.tex
@@ -3,8 +3,10 @@
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{listings}
 \usepackage{dsfont}
 \usepackage{minted}
+
 
 \usepackage{course}
 
