--- a/cs181/cs181.tex
+++ b/cs181/cs181.tex
@@ -1,5 +1,6 @@
 
 \input{../preamble.tex}
+\usepackage{tikz}
 
 \title{CS 181: \\
         Introduction to Theoretical Computer Science}
@@ -70,5 +71,6 @@
 \input{l4.tex}
 \input{l5.tex}
 \input{l6.tex}
+\input{l7.tex}
 
 \end{document}
