--- a/preamble.tex
+++ b/preamble.tex
@@ -13,6 +13,7 @@
 \usepackage{amsmath}
 \usepackage{array}
 \usepackage{booktabs}
+\usepackage{mathtools}
 
 \usepackage{mdframed}
 \definecolor{framebackground}{gray}{0.9}
